--- a/templates/gallery/base.html
+++ b/templates/gallery/base.html
@@ -16,11 +16,14 @@
     {% block static_CSS %}
     {% endblock %}
 
+    {% block page_styling %}
+    {% endblock %}
+
 </head>
 
 <!- body ->
 <body>
-    <div class="wrapper" id="my-page">
+    <div class="wrapper container-fluid" id="my-page">
         {% block navigation %}
         {% endblock %}
 
@@ -30,7 +33,8 @@
         <!- CONTENT block ->
         {% block content %}
         {% endblock %}
-    </div>
+
+</div>
 
         {% block static_JS %}
         {% endblock %}
