--- a/templates/gallery/partials/elements/nav-bar.html
+++ b/templates/gallery/partials/elements/nav-bar.html
@@ -1,16 +1,15 @@
-<nav class="nav mh-head Sticky fixed-top shadow-sm" style="background-color: rgb(243,243,243)">
-    <div class="col-5"></div>
-    <div class="col-1 center-vertical-absolute">
-        <button class="navbar-toggler mburger mburger--collapse btn-sm" type="button"
-                data-toggle="collapse" data-target="#menu" aria-controls="menu"
-                aria-expanded="true" aria-label="Toggle navigation">
-            <b></b>
-            <b></b>
-            <b></b>
-        </button>
-    </div>
-    <a class="text-right" href="#">
-        <h3 class="center-vertical-absolute">#AESTHETICLIMBO</h3>
-    </a>
+<nav class="mh-head Sticky shadow-sm" style="background-color: rgb(243,243,243)">
+   <div class="mh-btns-left">
+      <button class="navbar-toggler mburger mburger--collapse" type="button"
+         data-toggle="collapse" data-target="#menu" aria-controls="menu"
+         aria-expanded="true" aria-label="Toggle navigation">
+      <b></b>
+      <b></b>
+      <b></b>
+      </button>
+   </div>
+   <h3 class="mh-text"><a>#AESTHETICLIMBO</a></h3>
+   <span class="mh-btns-right">
+   <a class="fa fa-shopping-bag" href="#shoppingbag"></a>
+   </span>
 </nav>
-
