--- a/templates/gallery/partials/scripts/script_init_grid.html
+++ b/templates/gallery/partials/scripts/script_init_grid.html
@@ -1,30 +1,51 @@
 {{ margin|json_script:"margin" }}
-{{ columns|json_script:"columns" }}
-{{ b1280|json_script:"b1280" }}
-{{ b920|json_script:"b920" }}
-{{ b720|json_script:"b720" }}
 <script>
 let margin = JSON.parse(document.getElementById('margin').textContent);
-let columns = JSON.parse(document.getElementById('columns').textContent);
-let b1280 = JSON.parse(document.getElementById('b1280').textContent);
-let b920 = JSON.parse(document.getElementById('b920').textContent);
-let b720 = JSON.parse(document.getElementById('b720').textContent);
+{% if mode == 'showcase' %}
+        $(window).on('load', function() {
+            function gridMasonry() {
+                var grid = $(".masonry-grid")
+                if (grid.length) {
+                    grid.isotope({
+                        itemSelector: ".masonry-grid-item",
+                        layoutMode: "masonry",
+                        masonry: {
+                            columnWidth: ".masonry-grid-sizer",
+                            gutter: margin,
+                        },
+                        percentPosition: true,
+                    });
+                }
+            }
 
-window.onresize = doALoadOfStuff;
+            gridMasonry();
+            window.dispatchEvent(new Event('resize'));
+        });
 
-function doALoadOfStuff() {
-    Macy({
-    container: '#macy-container',
-    trueOrder: true,
-    waitForImages: true,
-    margin: margin,
-    columns: columns,
-    breakAt: {
-        1280: b1280,
-        920: b920,
-        720: b720
-    }});
-}
-doALoadOfStuff()
-doALoadOfStuff()
+    $('[data-fancybox]').fancybox({
+                animationDuration : 325,
+                animationEffect   : 'slide-in-out',
+            });
+
+    {% elif mode == 'section_list' %}
+
+            $(window).on('load', function(){
+            function gridMasonry(){
+                var grid = $(".masonry-grid")
+                if( grid.length ){
+                    grid.isotope({
+                        itemSelector: ".masonry-grid-item",
+                        layoutMode: "masonry",
+                        masonry: {
+                            columnWidth: ".masonry-grid-sizer",
+                            gutter: 18,
+                        },
+                        percentPosition: true,
+                    });
+                }
+            }
+            gridMasonry();
+            window.dispatchEvent(new Event('resize'));
+        });
+{% endif %}
 </script>
