--- a/templates/gallery/base.html
+++ b/templates/gallery/base.html
@@ -23,7 +23,7 @@
 
 <!- body ->
 <body>
-    <div class="wrapper container-fluid" id="my-page">
+    <div class="wrapper" id="my-page">
         {% block navigation %}
         {% endblock %}
 
@@ -33,7 +33,6 @@
         <!- CONTENT block ->
         {% block content %}
         {% endblock %}
-
 </div>
 
         {% block static_JS %}
