--- a/templates/gallery/partials/elements/nav-bar.html
+++ b/templates/gallery/partials/elements/nav-bar.html
@@ -1,12 +1,12 @@
-<nav class="mh-head Sticky shadow-sm" style="background-color: rgb(243,243,243)">
+<nav class="mh-head Sticky shadow-sm rounded-bottom" style="background-color: rgb(243,243,243)">
    <div class="mh-btns-left">
-      <button class="navbar-toggler mburger mburger--collapse" type="button"
+      <a class="navbar-toggler mburger mburger--collapse"
          data-toggle="collapse" data-target="#menu" aria-controls="menu"
          aria-expanded="true" aria-label="Toggle navigation">
       <b></b>
       <b></b>
       <b></b>
-      </button>
+      </a>
    </div>
    <h3 class="mh-text"><a>#AESTHETICLIMBO</a></h3>
    <span class="mh-btns-right">
