--- a/templates/gallery/showcase.html
+++ b/templates/gallery/showcase.html
@@ -39,7 +39,7 @@
               <div class="btn btn-primary border-0 rounded-0 m-0 p-0">
                  <a data-fancybox="{{ section_slug }}" data-options='{"src":"{{ pin.image_url }}",
                     "idleTime": false, "arrows": false, "protect": true,
-                    "buttons": ["share","slideShow","fullScreen","download","thumbs","close"]}'
+                    "buttons": ["share","slideShow","fullScreen","thumbs","close"]}'
                     data-caption="{{ pin.title }}" class="frame" style="background-color:{{ pin.color }}">
                     <div class="imageWrapper">
                        <img src="{{ pin.image_url }}" alt="" class="image">
