--- a/templates/gallery/showcase.html
+++ b/templates/gallery/showcase.html
@@ -68,6 +68,6 @@
 
 {% block page_scripts %}
 <!-- grid -->
-{% include './partials/scripts/script_init_grid.html' with mode='showcase' margin=0 only %}
+{% include './partials/scripts/script_init_grid.html' with mode='showcase' only %}
 {% endblock %}
 
