--- a/templates/gallery/partials/imports/import-static-js.html
+++ b/templates/gallery/partials/imports/import-static-js.html
@@ -9,6 +9,7 @@
 <!-- menu -->
 <script src="{% static '/vendor/mmenu.js/8.5.19/js/mmenu.min.js' %}"></script>
 <script src="{% static '/vendor/mmenu.js/8.5.19/js/mmenu.sidebar.min.js' %}"></script>
+<script src="{% static '/vendor/mmenu.js/8.5.19/js/mmenu.sidebar.min.js' %}"></script>
 <script src="{% static '/vendor/mmenu.js/8.5.19/js/mmenu.searchfield.min.js' %}"></script>
 <script src="{% static '/vendor/mmenu.js/8.5.19/js/mburger.js' %}"></script>
 <!-- lightboxes -->
