--- a/templates/gallery/section_list.html
+++ b/templates/gallery/section_list.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block menu %}
-    {% include 'gallery/partials/elements/menu.html' %}
+    {% include 'gallery/partials/elements/menu.html' with mode='section_list' %}
 {% endblock %}
 
 <! -- main -->
