--- a/templates/gallery/showcase.html
+++ b/templates/gallery/showcase.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block menu %}
-    {% include 'gallery/partials/elements/menu.html' %}
+    {% include 'gallery/partials/elements/menu.html' with mode="showcase" %}
 {% endblock %}
 
 {% block content %}
