--- a/templates/gallery/partials/elements/menu.html
+++ b/templates/gallery/partials/elements/menu.html
@@ -1,62 +1,44 @@
 
     <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav mr-auto" id="panel-menu">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#">
-                    <div class="row">
-                        <div class="col-1">
-                            <button class="btn btn-sm btn-icon-only border-0 shadow-inset btn-pill" type="button">
-                                <span class="far fa-heart"></span>
+                    <button class="btn btn-sm btn-icon-only border-0 shadow-inset btn-pill mr-3" type="button">
+                                <i class="far fa-heart"></i>
                             </button>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="center-vertical-absolute ml-2">
-                                Heart
-                            </h5>
-                        </div>
-                    </div>
+                    <b>Categories</b>
                 </a>
             </li>
+        {% if mode == 'showcase' %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="row justify-content-end">
-                        <div class="col-1">
-                            <button class="btn btn-sm btn-icon-only border-0 shadow-inset btn-pill opacity-0" type="button">
-                                <span class="far fa-heart"></span>
+                    <button class="btn btn-sm btn-icon-only border-0 shadow-inset btn-pill mr-3" type="button">
+                                <i class="far fa-heart"></i>
                             </button>
-                        </div>
-                        <div class="col-6 text-right justify-content-end">
-                            <h5 class="center-vertical-absolute ml-2 text-right justify-content-end">
-                                MORE ARTISTS
-                            </h5>
-                        </div>
-                    </div>
+                    <b>Categories</b>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     {% for section in section_list %}
-                        <a class="dropdown-item" href="{% url 'showcase' section.slug %}">
+
+                        <li class="dropdown-item">
+                        <a class="nav-link" href="{% url 'showcase' section.slug %}">
                             <b> {{ section.title_custom_split.0 }}</b>
                         </a>
-                    {% endfor %}
+                        </li>
                     <div class="dropdown-divider"></div>
-                </div>
+                    {% endfor %}
+                </ul>
             </li>
+        {% endif %}
             <li class="nav-item active">
                 <a class="nav-link" href="#">
-                    <div class="row">
-                        <div class="col-1">
-                            <button class="btn btn-sm btn-icon-only border-0 shadow-inset btn-pill" type="button">
-                                <span class="far fa-heart"></span>
+                    <button class="btn btn-sm btn-icon-only border-0 shadow-inset btn-pill mr-3" type="button">
+                                <i class="far fa-heart"></i>
                             </button>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="center-vertical-absolute ml-2">
-                                Heart
-                            </h5>
-                        </div>
-                    </div>
+                    <b>Categories</b>
                 </a>
             </li>
+
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -73,7 +55,7 @@
             new Mmenu( "#menu", {
 				wrappers: [ 'bootstrap' ],
 
-                extensions: ["shadow-page", "shadow-panels","shadow-menu", "multiline"],
+                extensions: ["shadow-page", "shadow-panels","shadow-menu", "multiline", "listview-justify", "border-full"],
 
                "iconPanels": true,
                 "navbars": [
@@ -87,11 +69,11 @@
                     {
                      "position": "bottom",
                      "content": [
-                        "<a href='#panel-menu'><button class='btn btn-sm btn-icon-only btn-primary border-0 shadow-inset\' type='button'>" +
+                        "<a href='#panel-menu'><button class='btn btn-sm btn-icon-only btn-primary border-0 shadow-inset' type='button'>" +
                         "<b class='fa fa-home'></b>" + "</button></a>",
-                        "<a href='#panel-menu'><button class='btn btn-sm btn-icon-only btn-primary border-0 shadow-inset\' type='button'>" +
+                        "<a href='#panel-menu'><button class='btn btn-sm btn-icon-only btn-primary border-0 shadow-inset' type='button'>" +
                         "<b class='fa fa-home'></b>" + "</button></a>",
-                        "<a href='#panel-menu'><button class='btn btn-sm btn-icon-only btn-primary border-0 shadow-inset\' type='button'>" +
+                        "<a href='#panel-menu'><button class='btn btn-sm btn-icon-only btn-primary border-0 shadow-inset' type='button'>" +
                         "<b class='fa fa-home'></b>" + "</button></a>",
                      ]
                   },
