--- a/templates/gallery/partials/scripts/script_init_grid.html
+++ b/templates/gallery/partials/scripts/script_init_grid.html
@@ -22,5 +22,13 @@
         animationDuration : 325,
         animationEffect   : 'slide-in-out',
     });
+
+    $(document).on('afterShow.fb', function( e, instance, slide ) {
+        document.body.style.cursor = 'grab';
+    });
+
+    $(document).on('afterClose.fb', function( e, instance, slide ) {
+        document.body.style.cursor = 'default';
+    });
 {% endif %}
 </script>
